Background position set to absolute and html/body to relative to avoid white background when scrolling on mobile

--- a/client/styles.css
+++ b/client/styles.css
@@ -34,6 +34,7 @@ html {
 
 body,
 html {
+  position: relative;
   font-family: Lato, sans-serif;
   margin: 0;
   padding: 0;
